<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Agrontrol</string>
    <string name="header_title2">Grabar Captura</string>
    <string name="header_title3">Reporte Parcial</string>
    <string name="header_title4">Ingresar Clave</string>
    <string name="header_title5">Parametros</string>
    <string name="header_label1">Ingrese datos fijos de Captura</string>
    <string name="header_label2">Ingrese datos de Recolección</string>
    <string name="header_label3">Seleccione datos para Reporte</string>
    <string name="header_label4">Ingrese clave para Ingresar a Opciones</string>
    <string name="header_label5">Opciones</string>
    <string name="btn_opciones_label">Opciones</string>
    <string name="btn_siguiente_label">Siguiente</string>
    <string name="btn_volver_label">Volver</string>
    <string name="btn_salir_label">Salir</string>
    <string name="btn_conectar_label">Conectar</string>
    <string name="btn_desconectar_label">Desconectar</string>
    <string name="btn_ir_opcion_label">Ir a Opciones</string>
    <string name="btn_imprimir_label">Imprimir</string>
    <string name="btn_reporte_parcial_label">Reporte Parcial</string>
    <string name="btn_reporte_label">Reporte</string>
    <string name="btn_scan_label">Escanear</string>
    <string-array name="unidad_items">
        <item>2</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="btn_print_save_label">Imprime &amp; Graba</string>
    <string name="btn_save_label">Grabar</string>
    <string name="btn_del_capture_label">Borrar Capt</string>
    <string name="btn_test_printer_label">Prueba Impresora</string>
    <string name="input1_label">Rut o Codigo Recepcionista</string>
    <string name="input2_label">Rut o Codigo Cosechero</string>
    <string name="report_start_label">Correlativo Inicial</string>
    <string name="report_end_label">Correlativo Final</string>
    <string name="labor_input">Labor</string>
    <string name="tipo_pesaje_label">Tipo de Pesaje</string>
    <string name="caja_txt">Caja</string>
    <string name="kilo_txt">Kilo</string>
    <string name="unidades_input">Cantidad</string>
    <string name="tara_input">Tara Caja (Gr)</string>
    <string name="peso_caja_input">Peso de Cajas (Kg)</string>
    <string name="peso_neto_txt">Peso Neto (Kg)</string>
    <string name="id_capt_txt">Id Capturador</string>
    <string name="correlativo_txt">Correlativo</string>
    <string name="licencia_input">Licencia Equipo</string>
    <string name="clave_label">Clave Equipo</string>
    <string name="options_id_capturador">cl.inspira2.agrontrol.ID_CAPTURADOR</string>
    <string name="options_correlativo">cl.inspira2.agrontrol.CORRELATIVO</string>
    <string name="options_licencia">cl.inspira2.agrontrol.LICENCIA</string>
    <string name="options_printer">cl.inspira2.agrontrol.PRINTER_ADDRS</string>
    <string name="error_connect_failed">Fallo la conexión</string>
    <string name="error_connect_lost">se perdio la conexión</string>

    <!--  BluetoothChat -->
    <string name="send">Enviar</string>
    <string name="not_connected">No esta conectado a una impresora</string>
    <string name="bt_not_enabled_leaving">Bluetooth no esta habilitado</string>
    <string name="title_connecting">conectando...</string>
    <string name="title_connected_to">conectado a <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">no conectado</string>

    <!--  DeviceListActivity -->
    <string name="scanning">Buscando dispositivos...</string>
    <string name="select_device">seleccione un dispositivo para conectar</string>
    <string name="none_paired">Ningun dispositivo pareado</string>
    <string name="none_found">No se encuentran dispositivos</string>
    <string name="title_paired_devices">Dispositivos Pareados</string>
    <string name="title_other_devices">Otros Dispositivos Disponibles</string>
    <string name="button_scan">Buscar Dispositivos</string>

    <!-- Options Menu -->
    <string name="secure_connect">Conectar - Seguro</string>
    <string name="insecure_connect">Conectar - Inseguro</string>
    <string name="discoverable">Permitir Encontrar</string>

</resources>
