<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/secure_connect_scan"
        android:icon="@drawable/ic_action_device_access_bluetooth_searching"
        android:title="@string/secure_connect"
        android:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/insecure_connect_scan"
        android:title="@string/insecure_connect"
        android:showAsAction="never" />

    <item
        android:id="@+id/discoverable"
        android:title="@string/discoverable"
        android:showAsAction="never"
        android:visible="false" />

    <item
        android:id="@+id/test_printer"
        android:title="@string/btn_test_printer_label"
        android:showAsAction="never" />

</menu>