<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recoleccion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cl.inspira2.myapplication.RecoleccionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/header_label2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textAlignment="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText_rut_cosechero"
                android:hint="@string/input2_label"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <Button
                android:text="@string/btn_scan_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_scan" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_cosechero"
                android:elevation="1dp"
                android:textAlignment="center" />

            <TextView
                android:text="@string/unidades_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView11" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText_unidades"
                android:hint="@string/unidades_input"
                android:text="0"
                android:singleLine="true" />

            <TextView
                android:text="@string/tara_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_label_taraCaja" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText_taraCaja"
                android:hint="@string/tara_input"
                android:text="0"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/kilo_layout">

            <TextView
                android:text="@string/peso_caja_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_label_pesoCaja" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText_pesoCajas"
                android:hint="@string/peso_caja_input"
                android:text="0"
                android:inputType="numberDecimal" />

            <TextView
                android:text="@string/peso_neto_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_label_pesoNeto" />

            <TextView
                android:text="0"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:id="@+id/textView_pesoNeto"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textAlignment="center"
                android:gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:text="@string/header_title3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button4"
                    android:layout_weight="1"
                    android:onClick="goReporte" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:text="@string/btn_print_save_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button5"
                    android:layout_weight="1"
                    android:onClick="saveCapture" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
