<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cl.inspira2.myapplication.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/panel_main">

            <TextView
                android:text="@string/header_label1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_title1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textAlignment="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_below="@+id/textView_title1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/editText_rut"
                android:hint="@string/input1_label" />

            <Button
                android:text="@string/btn_scan_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_scan2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_rut"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/nombre_recepcionista"
                android:textAlignment="center" />

            <TextView
                android:text="Seleccione Cuartel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:id="@+id/spinner_cuartel"
                android:spinnerMode="dropdown" />

            <TextView
                android:text="Ingrese Labor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText_labor"
                android:hint="@string/labor_input" />

            <TextView
                android:text="Seleccione Unidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:id="@+id/spinner_unidad"
                android:entries="@array/unidad_items" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:gravity="center_vertical">

                <TextView
                    android:text="@string/tipo_pesaje_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:layout_weight="1" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:checkedButton="@+id/radioButton_caja"
                    android:id="@+id/tipoPesaje_group">

                    <RadioButton
                        android:text="@string/caja_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton_caja"
                        android:layout_weight="1" />

                    <RadioButton
                        android:text="@string/kilo_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton_kilo"
                        android:layout_weight="1" />

                </RadioGroup>

            </LinearLayout>

            <TextView
                android:text="Seleccione Tipo de Caja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:id="@+id/spinner_tipo_caja" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="bottom">

                <Button
                    android:text="@string/btn_opciones_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/optionButton"
                    android:layout_weight="1"
                    android:onClick="goOptions" />

                <Button
                    android:text="@string/btn_siguiente_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nextButton_1"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="1"
                    android:onClick="goRecoleccion" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
